gcc/testsuite/g++.dg/modules/ice-1.C
// { dg-additional-options "-fmodules-ts" }
// we ICED on malformed preambles ending at EOF.
import bob // { dg-error "expected" }
